--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -311,7 +311,7 @@
 {% endblock events %}
 
 {% block book-a-table %} 
-    <section id="book-a-table" class="book-a-table">
+    <section id="book-a-table" class="book-a-table" >
       <div class="container">
 
         <div class="section-title">
@@ -319,7 +319,7 @@
          
         </div>
 
-        <form action="{% url 'reservation' %}" method="POST"  >
+        <form action="{% url 'reservation' %}" method="POST"  class="php-email-form" >
           {% csrf_token %}
           <div class="form-row">
             <div class="col-lg-4 col-md-6 form-group">
@@ -351,7 +351,7 @@
             <textarea class="form-control" name="message" rows="5" placeholder="Message"></textarea>
             <div class="validate"></div>
           </div>
-          
+        
           <div class="text-center"><button type="submit">Send Message</button></div>
         </form>
 
