--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -236,7 +236,8 @@
                     <p class="font-italic">{{special.specialDescription}}</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2" id="specialSize">
-                    <img src="{{special.specialImage.url}}" alt="" class="img-fluid">
+                    <img src="{% static 'restaurant/images/kitfo.jpg' %}" alt="" class="img-fluid">
+                    {% comment %} <img src="{{special.specialImage.url}}" alt="" class="img-fluid"> {% endcomment %}
                   </div>
                 </div>
               </div>
@@ -249,7 +250,8 @@
                     <p class="font-italic">{{special.specialDescription}}</p>
                   </div>
                   <div class="col-lg-4 text-center order-1 order-lg-2" id="specialSize">
-                    <img src="{{special.specialImage.url}}" alt="" class="img-fluid">
+                    <img src="{% static 'restaurant/images/tibs.jpg' %}" alt="" class="img-fluid">
+                    {% comment %} <img src="{{special.specialImage.url}}" alt="" class="img-fluid"> {% endcomment %}
                   </div>
                 </div>
               </div>
