setting up datepicker

--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -343,6 +343,7 @@
             </div>
             <div class="col-lg-4 col-md-6 form-group">
               <input type="text" class="form-control" name="time" id="time" placeholder="Time" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+              <span class="glyphicon glyphicon-calendar"></span>
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group">
