--- a/project_restaurant/restaurant/templates/restaurant/base.html
+++ b/project_restaurant/restaurant/templates/restaurant/base.html
@@ -25,7 +25,12 @@
   <link href="{% static 'restaurant/vendor/animate.css/animate.min.css' %}" rel="stylesheet">
   <link href="{% static 'restaurant/vendor/venobox/venobox.css' %}" rel="stylesheet">
   <link href="{% static 'restaurant/vendor/owl.carousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
 
   <link href="{% static 'restaurant/css/style.css' %}" rel="stylesheet">
   <link href="{% static 'restaurant/css/main.css' %}" rel="stylesheet">
