--- a/project_restaurant/users/templates/users/order.html
+++ b/project_restaurant/users/templates/users/order.html
@@ -140,7 +140,7 @@
                     <hr />
                     {% endfor %}
                 </div>
-                <button class="btn btn-dark mt-5">Place Order!</button>
+                <button id='orange' class="btn btn-dark mt-5">Place Order!</button>
             </form>
 
         </div>
