reservation mail done

--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -342,8 +342,13 @@
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group">
+              <div class="input-group">
               <input type="text" class="form-control" name="time" id="time" placeholder="Time" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
-              <span class="glyphicon glyphicon-calendar"></span>
+              <span class="input-group-addon">
+                <span class="glyphicon glyphicon-calendar"></span>
+
+              </span>
+              
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group">
