date time picker

--- a/project_restaurant/restaurant/templates/restaurant/base.html
+++ b/project_restaurant/restaurant/templates/restaurant/base.html
@@ -130,6 +130,12 @@
 
 
   <script src="{% static 'restaurant/js/main.js' %}"></script>
+  <script type="text/javascript">
+    $(function()
+{
+  $('#datetimepicker').datetimepicker();
+});
+  </script>
 
 </body>
 
