--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -338,16 +338,20 @@
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group">
-              <input type="text" name="date" class="form-control" id="date" placeholder="Date" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
-              <div class="validate"></div>
-            </div>
-            <div class="col-lg-4 col-md-6 form-group">
-              <div class="input-group">
-              <input type="text" class="form-control" name="time" id="time" placeholder="Time" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
-              <span class="input-group-addon">
-                <span class="glyphicon glyphicon-calendar"></span>
+              <div class="input-group" id="datetimepicker">
+             <input type="text" name="date" class="form-control" id="date" placeholder="Date" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+             <span class="input-group-addon">
+              <span class="glyphicon glyphicon-calendar"></span>
+            </span>
 
-              </span>
+            </div>
+            </div>
+                <div class="validate"></div>
+            
+            <div class="col-lg-4 col-md-6 form-group">
+              
+              <input type="text" class="form-control" name="time" id="time" placeholder="Time" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+               
               
               <div class="validate"></div>
             </div>
