Reservation email added

--- a/project_restaurant/restaurant/static/restaurant/css/main.css
+++ b/project_restaurant/restaurant/static/restaurant/css/main.css
@@ -48,3 +48,9 @@
     left: 0;
     bottom: 0;
 }
+.form-check-input{
+    color: black!important;
+}
+.form-check-label{
+    margin-left: 3rem;
+}
