--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -326,37 +326,30 @@
           {% csrf_token %}
           <div class="form-row">
             <div class="col-lg-4 col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter your full name" required>
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email">
+              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" required>
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group">
-              <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
+              <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone" data-rule="minlen:4" data-msg="Please enter your phone number" required>
               <div class="validate"></div>
             </div>
             <div class="col-lg-4 col-md-6 form-group">
-              <div class="input-group" id="datetimepicker">
-             <input type="text" name="date" class="form-control" id="date" placeholder="Date" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
-             <span class="input-group-addon">
-              <span class="glyphicon glyphicon-calendar"></span>
-            </span>
+              
+             <input type="datetime-local" name="date" class="form-control" id="date" placeholder="Date" data-rule="minlen:4" data-msg="Please enter the date" required>
+             
 
-            </div>
+         
             </div>
                 <div class="validate"></div>
             
+           
+           
             <div class="col-lg-4 col-md-6 form-group">
-              
-              <input type="text" class="form-control" name="time" id="time" placeholder="Time" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
-               
-              
-              <div class="validate"></div>
-            </div>
-            <div class="col-lg-4 col-md-6 form-group">
-              <input type="number" class="form-control" name="people" id="people" placeholder="# of people" data-rule="minlen:1" data-msg="Please enter at least 1 chars">
+              <input type="number" min="1" class="form-control" name="people" id="people" placeholder="# of people" data-rule="minlen:1" data-msg="Please enter the number of people" required>
               <div class="validate"></div>
             </div>
           </div>
@@ -365,7 +358,26 @@
             <div class="validate"></div>
           </div>
         
-          <div class="text-center"><button type="submit">Send Message</button></div>
+          <div class="text-center"><button type="submit" data-toggle="modal" data-target="#myModal">Send Message</button></div>
+          <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog">
+            
+              <!-- Modal content-->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h2 class="modal-title">Reservation Sent Successfully!</h2>
+                </div>
+                <div class="modal-body">
+                  <p>We will confirm your reservation shortly via email or a phone call!</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" onclick="javascript:window.location.reload()" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+              
+            </div>
+          </div>
         </form>
 
       </div>
