working on validations of reservations

--- a/project_restaurant/restaurant/templates/restaurant/base.html
+++ b/project_restaurant/restaurant/templates/restaurant/base.html
@@ -130,7 +130,7 @@
 
 
   <script src="{% static 'restaurant/js/main.js' %}"></script>
-  <!-- <script src="{% static 'restaurant/js/datetime.js' %}"></script> -->
+  <!-- <script src="{% static 'restaurant/js/validate.js' %}"></script> -->
   <script type="text/javascript">
    
   </script>
