--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -322,7 +322,7 @@
          
         </div>
 
-        <form action="{% url 'reservation' %}" method="POST"  class="php-email-form" >
+        <form action="{% url 'reservation' %}" method="POST"  class="php-email-form" id="myForm" >
           {% csrf_token %}
           <div class="form-row">
             <div class="col-lg-4 col-md-6 form-group">
@@ -358,7 +358,7 @@
             <div class="validate"></div>
           </div>
         
-          <div class="text-center"><button type="submit" data-toggle="modal" data-target="#myModal">Send Message</button></div>
+          <div class="text-center"><button type="submit"  id = "submit" data-toggle="modal" data-target="#myModal">Send Message</button></div>
           <div class="modal fade" id="myModal" role="dialog">
             <div class="modal-dialog">
             
