Another bug fix

--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -145,7 +145,7 @@
           {% for starter in starterMenu %}
           <div class="col-lg-6 menu-item filter-starters">
             <div class="col-md-2 text-center" id="menuSize">
-              <img src="{% static "'restaurant/images/starters/" %}{{ starter.starterOption }}.jpg" alt="" class="img-fluid">
+              <img src="{% static "restaurant/images/starters/" %}{{ starter.starterOption }}.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-8">
               <div class="menu-content">
