Another bug fixS

--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -145,7 +145,7 @@
           {% for starter in starterMenu %}
           <div class="col-lg-6 menu-item filter-starters">
             <div class="col-md-2 text-center" id="menuSize">
-              <img src="{% static "restaurant/images/starters/" %}{{ starter.starterOption }}.jpg" alt="" class="img-fluid">
+              <img src="{% static "restaurant/images/starters/" %}{{ starter.id }}.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-8">
               <div class="menu-content">
@@ -163,7 +163,7 @@
           {% for main in mainMenu %}
           <div class="col-lg-6 menu-item filter-main">
           `<div class="col-md-2 text-center" id="menuSize">
-              <img src="{% static 'restaurant/images/kitfo.jpg' %}" alt="" class="img-fluid">
+              <img src="{% static "restaurant/images/mains/" %}{{ main.id }}.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-8">
               <div class="menu-content">
@@ -179,7 +179,7 @@
           {% for dessert in dessertMenu %}
           <div class="col-lg-6 menu-item filter-desserts">
             <div class="col-md-2 text-center" id="menuSize">
-              <img src="{% static 'restaurant/images/kitfo.jpg' %}" alt="" class="img-fluid">
+              <img src="{% static "restaurant/images/desserts/" %}{{ dessert.id }}.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-8">
               <div class="menu-content">
@@ -195,7 +195,7 @@
           {% for drinks in drinksMenu %}
           <div class="col-lg-6 menu-item filter-drinks">
             <div class="col-md-2 text-center" id="menuSize">
-              <img src="{% static 'restaurant/images/kitfo.jpg' %}" alt="" class="img-fluid">
+              <img src="{% static "restaurant/images/drinks/" %}{{ drinks.id }}.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-md-8">
               <div class="menu-content">
