--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -552,9 +552,9 @@
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
               <i class="icofont-clock-time icofont-rotate-90"></i>
               <h4>Open Hours:</h4>
-              <p>lun &amps; mar:	<br> {{openHours.weekdays_startTime}} – {{openHours.weekdays_endTime}}<br><br>
+              <p>lun &amp; mar:	<br> {{openHours.weekdays_startTime}} – {{openHours.weekdays_endTime}}<br><br>
                 mié:	<br> Cerrado<br><br>
-                 jue &amps; vie &amps; sáb &amps; dom:	<br>{{openHours.weekends_startTime}} – {{openHours.weekends_endTime}}, {{openHours.weekdays_startTime}} – {{openHours.weekdays_endTime}}</p>
+                 jue &amp; vie &amp; sáb &amp; dom:	<br>{{openHours.weekends_startTime}} – {{openHours.weekends_endTime}}, {{openHours.weekdays_startTime}} – {{openHours.weekdays_endTime}}</p>
             </div>
 
             <div class="col-lg-3 col-md-6 info mt-4 mt-lg-0">
