--- a/project_restaurant/restaurant/static/restaurant/css/style.css
+++ b/project_restaurant/restaurant/static/restaurant/css/style.css
@@ -650,7 +650,7 @@ section {
 # About
 --------------------------------------------------------------*/
 #aboutPic{
-  background-image: url("../images/about.png");
+  background-image: url("../images/place1.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
