--- a/project_restaurant/restaurant/static/restaurant/css/style.css
+++ b/project_restaurant/restaurant/static/restaurant/css/style.css
@@ -650,10 +650,8 @@ section {
 # About
 --------------------------------------------------------------*/
 #aboutPic{
-  background-image: url("../images/place1.jpg");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-position: center;
+  background-image: url("../images/about.png");
+  min-height: 10rem;
 }
 .about {
   background: #fffaf3;
