--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -42,11 +42,11 @@
 
         <div class="row">
 
-          <div class="col-lg-5 " id='aboutPic'>
+          <div class="col-lg-5 ml-4" id='aboutPic'>
             
           </div>
           {% for about in aboutUs%}
-          <div class="col-lg-7 d-flex flex-column justify-content-center align-items-stretch">
+          <div class="col-lg-5 d-flex flex-column lh-2 justify-content-center align-items-stretch">
 
             <div class="content">
               <h3> <strong>{{about.aboutTitle}}</strong></h3>
