--- a/project_restaurant/restaurant/templates/restaurant/home.html
+++ b/project_restaurant/restaurant/templates/restaurant/home.html
@@ -466,8 +466,10 @@
         </div>
 
         <div class="row">
+          <div class="col-lg-4">
+          </div>
           {% for chef in chefs %}
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4">
             <div class="member">
               <div class="pic" id="chefSize">
                 {% comment %} <img src="{{chef.chefImage.url}}" class="img-fluid" alt=""> {% endcomment %}
