--- a/project_restaurant/users/templates/users/order.html
+++ b/project_restaurant/users/templates/users/order.html
@@ -56,7 +56,8 @@
                     </div>
                     <hr class='mt-5' />
                 </div>
-                <div class="pt-2">
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="appetizers">Appetizerst</button>
+                <div class="pt-2" id='appetizers'>
                 <h2>Appetizers</h2>
                     {% for app in appetizers %}
                         <div class="row event-item">
