--- a/project_restaurant/users/templates/users/order.html
+++ b/project_restaurant/users/templates/users/order.html
@@ -56,9 +56,10 @@
                     </div>
                     <hr class='mt-5' />
                 </div>
-                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="appetizers">Appetizerst</button>
-                <div class="pt-2" id='appetizers'>
+                <div class="pt-2">
+                <i class="icofont-envelope" data-toggle="collapse" data-target="#appetizers" aria-expanded="false" aria-controls="appetizers"></i>
                 <h2>Appetizers</h2>
+                    <div id='appetizers'>
                     {% for app in appetizers %}
                         <div class="row event-item">
                             <div class="col-md-8 col-sm-12">
@@ -77,6 +78,7 @@
                         </div>
                         <hr />
                     {% endfor %}
+                    <div>
                 </div>
                 <div class="pt-2">
                 <h2>Main Dish</h2>
