--- a/project_restaurant/users/templates/users/order.html
+++ b/project_restaurant/users/templates/users/order.html
@@ -57,28 +57,28 @@
                     <hr class='mt-5' />
                 </div>
                 <div class="pt-2">
-                <i class="icofont-envelope" data-toggle="collapse" data-target="#appetizers" aria-expanded="false" aria-controls="appetizers"></i>
-                <h2>Appetizers</h2>
-                    <div id='appetizers'>
-                    {% for app in appetizers %}
-                        <div class="row event-item">
-                            <div class="col-md-8 col-sm-12">
-                                <div class="d-flex flex-row">
-                                    <div class="form-group form-check">
-                                        <input type="checkbox" name="app_items[]" class="form-check-input" value="{{ app.pk }}">
-                                        <label class="form-check-label">{{ app.starterContent }}</label>
-                                    </div>
-                                    <p class="font-weight-bold pl-5">{{ app.starterPrice }}</p>
-                                    <div class="form-group form-input ml-5 mt-0">
-                                        <input type="number" name="app-items-{{ app.pk }}" class="form-check-input" value="1" min="1" max="5">
+                    <button class="btn btn-main" type="button" data-toggle="collapse" data-target="#appetizers" aria-expanded="false" aria-controls="appetizers"><i class="icofont-envelope"></i></button>
+                    <h2>Appetizers</h2>
+                        <div id='appetizers'>
+                            {% for app in appetizers %}
+                                <div class="row event-item">
+                                    <div class="col-md-8 col-sm-12">
+                                        <div class="d-flex flex-row">
+                                            <div class="form-group form-check">
+                                                <input type="checkbox" name="app_items[]" class="form-check-input" value="{{ app.pk }}">
+                                                <label class="form-check-label">{{ app.starterContent }}</label>
+                                            </div>
+                                            <p class="font-weight-bold pl-5">{{ app.starterPrice }}</p>
+                                            <div class="form-group form-input ml-5 mt-0">
+                                                <input type="number" name="app-items-{{ app.pk }}" class="form-check-input" value="1" min="1" max="5">
+                                            </div>
+                                        </div>
+                                        <p>{{ app.starterDesc }}</p>
                                     </div>
                                 </div>
-                                <p>{{ app.starterDesc }}</p>
-                            </div>
-                        </div>
-                        <hr />
-                    {% endfor %}
-                    <div>
+                                <hr />
+                            {% endfor %}
+                        <div>
                 </div>
                 <div class="pt-2">
                 <h2>Main Dish</h2>
